
2.1.2 (2013-06-07)
* Hash: #first_key, #first_value

2.1.1 (2013-02-12)
* Hash: #+, #<<
* Symbol: #start_with? and #end_with? receives also symbols

2.1.0 (2012-11-24) 
* most of missing tests
* a lot of compatibility problems fixed
* specs (tests) to standard file structure
* Hash: #some?, #some_pairs? bug fix 
* Array: #merge! optimization 
* Array: #complete_to, #complete_to!, #cut, #cut!, #drop!, #expand_by, 
  #expand_by!, #interlace, #interlace!, #shrink_to, #shrink_to!, #zip! 
* Symbol: #<=>
  
2.0.2 (2012-10-06)
* String: #first compatiblity problem with 1.8 fixed
* StringIO: compatiblity problem with Rubinius 1.9 fixed
* RSpec tests
* Travis CI integration

2.0.1 (2012-08-26)
* Object: #enumerable?
* Hash: #flip, #flip!
* readme correction

2.0.0 (2012-03-15)
* defensive (safe) class patching
* Array: #to_set
* Object: #to_sym
* bug fix in Array#clean!
* many subminor fixes
* minor optimizations

1.0.0 (2011-10-17)
* Boolean: #convert, #to_i
* String: #to_boolean
* Nil: #to_boolean
* Array: #clean, #clean!
* Hash: #clean, #clean!
* String: #random
* Numeric#compare is deprecated
* 'ruby-version' dependency
* conditional methods definitions depending to Ruby version
* StringIO have correct ancestor now
* File#write now writes non-binary again, binary writing moved to File#binwrite

0.18.1 (2011-08-22)
* String: #interlace, #interlace!
* Object#instance_of_any? and #kind_of_any? receives both class or 
  array of classes
* bug fix in String#unshift

0.18.0 (2011-07-13)
* Object: #proc?
* Proc: #proc?
* String: #swap_with, #cut!
* minor optimizations

0.17.1 (2011-06-24)
* Gem: #available?, #require_available

0.17.0 (2011-06-24)
* Numeric: #number?
* String: #string?
* Object: #string?, #symbol?, #number?, #boolean?, #array?, #hash?
* Symbol: #strip
* TrueClass: #boolean?, #false?, #true?
* FalseClass: #boolean?, #false?, #true?
* Hash: #hash?
* Array: #array?

0.16.0 (2011-06-23)
* Numeric: #compare, #positive?, #negative?, #negative!, #positive!